--- a/Servidor-JAXRS/pom.xml
+++ b/Servidor-JAXRS/pom.xml
@@ -20,6 +20,7 @@
             <artifactId>jersey-server</artifactId>
             <version>2.22.1</version>
             <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
