--- a/City/Cities.logic/pom.xml
+++ b/City/Cities.logic/pom.xml
@@ -3,12 +3,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>co.edu.uniandes.rest</groupId>
-    <artifactId>Servidor-JAXRS</artifactId>
+    <artifactId>Cities.logic</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>Servidor-JAXRS</name>
-
+    <name>Cities.logic</name>
+    <parent>
+        <groupId>co.edu.uniandes</groupId>
+        <artifactId>City</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
