--- a/City/Cities.web/pom.xml
+++ b/City/Cities.web/pom.xml
@@ -9,11 +9,10 @@
 
     <name>Cities.web</name>
     <parent>
-        <groupId>co.edu.uniandes</groupId>
+        <groupId>co.edu.uniandes.rest</groupId>
         <artifactId>City</artifactId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
-
     </parent>
 
     <properties>
@@ -22,6 +21,13 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>2.22.1</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
